--- a/Project folder/CSS/style.css
+++ b/Project folder/CSS/style.css
@@ -411,6 +411,16 @@ legend {
   font-size: 15px;
 }
 
+.loyalty_points{
+  border-radius: 50px ;
+  background-color:rgb(188, 135, 0);
+  border-color:rgb(188, 135, 0);
+  color: black;
+  height: 60px;
+  width: 180px;
+  font-size: 15px;
+}
+
 .favourites_button{
   border-radius: 50px ;
   background-color:rgb(188, 135, 0);
